# BasicInterpreter

./: code  makefile
Basic/: Basic  Basic.cpp  CMakeLists.txt  evalstate.cpp  evalstate.h  exp.cpp  parser.cpp  program.cpp  statement.cpp  statement.h
Basic/Basic.dSYM/Contents/Resources/DWARF/: Basic
Demo/: Basic-Demo-32bit
StanfordCPPLib/: Makefile  error.cpp  ginteractors.h  hashset.h  queue.h  strlib.cpp  tokenscanner.h
StanfordCPPLib/private/: tplatform.h
Test/: s  score  score.cc  test_ans
code.dSYM/Contents/Resources/DWARF/: code
